# ethicscheck

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ethicscheck/: __init__.py  cli.py  config.py  models.py  plugins.py  runner.py
src/ethicscheck/frameworks/: base.py  eu_ai_act.py  iso_42001.py  nist_rmf.py
src/ethicscheck/output/: __init__.py  formats.py  terminal.py
tests/: __init__.py  test_cli.py  test_eu_ai_act.py  test_nist_rmf.py
