[project]
name = "ethicscheck"
version = "0.1.0"
description = "AI ethics pre-deployment compliance checker for EU AI Act, NIST AI RMF, and ISO/IEC 42001"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["ai", "ethics", "compliance", "eu-ai-act", "nist", "cli", "mlops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
]

[project.scripts]
ethicscheck = "ethicscheck.cli:app"

[project.entry-points."ethicscheck.frameworks"]
# This group is intentionally empty in the core package.
# Third-party plugins register here to be auto-discovered by EthicsCheck.
#
# Example — in a plugin package's pyproject.toml:
#
#   [project.entry-points."ethicscheck.frameworks"]
#   callchain = "ethicscheck_callchain:AICallChainFramework"
#
# Once installed (`pip install ethicscheck-plugin-callchain`), EthicsCheck
# will discover and run the plugin automatically with no further configuration.

[project.urls]
Homepage = "https://github.com/ethicscheck/ethicscheck"
Repository = "https://github.com/ethicscheck/ethicscheck"
Issues = "https://github.com/ethicscheck/ethicscheck/issues"
Documentation = "https://ethicscheck.dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ethicscheck"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = [
    "E501",  # line-too-long — framework files contain long regulatory description strings
]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ethicscheck --cov-report=term-missing"
